<?xml version="1.0" encoding="utf-8"?>
<!--Justin Chipman - N01598472-->
<!--Imran Zafurallah - N01585098-->
<!--Zane Aransevia - N01351168-->
<!--Tevadi Brookes - N01582563-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:padding="24dp">

    <!-- App Logo -->
<ImageView
android:id="@+id/app_logo"
android:layout_width="200dp"
android:layout_height="200dp"
android:src="@mipmap/logo_round"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="24dp" />

    <!-- Username Input Field -->
<EditText
android:id="@+id/username"
android:layout_width="0dp"
android:layout_height="wrap_content"
    android:autofillHints="Email"
    android:hint="@string/username"
android:backgroundTint="#FFFFFF"
    android:textColor="@color/black"
    android:textColorHint="#888888"
    android:inputType="text"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    android:drawablePadding="8dp"
    android:elevation="4dp"
    android:background="@drawable/rounded_edittext_background"
    app:layout_constraintTop_toBottomOf="@id/app_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password Input Field -->
<EditText
android:id="@+id/password"
android:layout_width="0dp"
android:layout_height="wrap_content"
    android:autofillHints="Password"
    android:hint="@string/password"
android:backgroundTint="#FFFFFF"
    android:textColor="@color/black"
android:textColorHint="#888888"
android:inputType="textPassword"
android:padding="16dp"
android:layout_marginBottom="24dp"
android:drawablePadding="8dp"
android:elevation="4dp"
android:background="@drawable/rounded_edittext_background"
app:layout_constraintTop_toBottomOf="@id/username"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login Button -->
<Button
android:id="@+id/loginButton"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:text="@string/login"
    android:textColor="@color/text_color"
android:backgroundTint="#A67C55"
    android:padding="16dp"
    android:textStyle="bold"
    android:layout_marginTop="16dp"
    android:elevation="6dp"
    android:background="@drawable/rounded_button_background"
    app:layout_constraintTop_toBottomOf="@id/password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:backgroundTint="#A67C55"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:elevation="6dp"
        android:background="@drawable/rounded_button_background"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register" />

    <!-- Loading ProgressBar -->
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
    android:indeterminate="true"
    app:layout_constraintTop_toBottomOf="@id/loginButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
